# AlbumMagic

./: .env  .env.sample  .gitignore  README.md  main.py  requirements.txt  vercel.json
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
backend/src/albummagic/: api.rs  mod.rs  player.rs  spotify_client.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthRouteWrapper.tsx
frontend/src/hooks/: useAuthCheck.ts
frontend/src/pages/: Auth.tsx  Callback.tsx  SongView.tsx
py_tools/: __init__.py
py_tools/spotify/: average_color.py  color.py
static/css/: background.css  style.css  style.css.map
static/js/: index.js  spotify_actions.js  time.js
static/scss/: style.scss
templates/: error.html  index.html
