[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
rspotify = { version = "0.15.0", features = ["cli", "env-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
